feat(report): [1/5] SSR-generate HTML
